src/test/resources/example/cocos/valid/validPrePost.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl validPrePost {
  context boolean BidMessage.isAuctionsSpecific()
  pre ias1 : true;
  post ias2 : result == true;
}
