src/test/resources/example/cocos/invalid/invalidPreStatementName.ocl
ocl invalidPreStatementName {
  context boolean BidMessage.isAuctionsSpecific()
  pre ias1 : true;
  post ias2 : result == true;
}